plugins {
    id 'java'
}

group = 'org.pesho'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {

    implementation group: 'org.eclipse.jetty.ee10', name: 'jetty-ee10-servlet', version: '12.0.15'
    // https://mvnrepository.com/artifact/redis.clients/jedis

    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

test {
    useJUnitPlatform()
}